results/SpecGenBench/2-shot/log-ContainsDuplicate-2023_11_05_23_19_40.txt
import java.util.Arrays;

public class ContainsDuplicate {

    //@ requires nums != null;
    //@ ensures \result == true <==> (\exists int i, j; 0 <= i && i < j && j < nums.length; nums[i] == nums[j]);
    public boolean containsDuplicate(int[] nums) {
        Arrays.sort(nums);
        int n = nums.length;

        //@ maintaining (\forall int i; 0 <= i && i < n-1; nums[i] != nums[i + 1]);
        //@ decreases n;
        for (int i = 0; i < n - 1; i++) {
            if (nums[i] == nums[i + 1]) {
                return true;
            }
        }
        return false;
    }
}
/home/max/Documents/JMLGPT/tmp/ContainsDuplicate.java:11: error: variable i is already defined in method containsDuplicate(int[])
        //@ maintaining (\forall int i; 0 <= i && i < n-1; nums[i] != nums[i + 1]);
                                     ^
1 error

